# AAAA-Assignment1

AAAAEngine/: Doxyfile  README.md  SelfAndPeerEvaluation.docx
AAAAEngine/AAAAGameEngine2/: AAAAGameEngine2.sln  cmake.bat
AAAAEngine/AAAAGameEngine2/AAAAGameEngine2/: AAAAGameEngine2.vcxproj  AAAAGameEngine2.vcxproj.filters  CMakeLists.txt
AAAAEngine/AAAAGameEngine2/AAAAGameEngine2/resources/models/: Vacuum.mtl  superdome.mtl  tall_narrow_tree.mtl  teletubbie_dipsy.mtl  teletubbie_laalaa.mtl  teletubbie_tinkywinky.mtl
AAAAEngine/AAAAGameEngine2/AAAAGameEngine2/resources/shaders/: skybox.shader  terrain.shader
AAAAEngine/AAAAGameEngine2/AAAAGameEngine2/src/: Camera.cpp  Camera.h  Components.cpp  Components.h  CoreEngine.cpp  DataStructures.cpp  DataStructures.h  ECS.h  GraphicsUtility.cpp  GraphicsUtility.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  InputHandler.cpp  InputHandler.h  Lighting.cpp  Lighting.h  LightingManager.cpp  LightingManager.h  LodManager.cpp  LodManager.h  Material.cpp  Material.h  MeshComponent.cpp  MeshComponent.h  MeshComponents.cpp  MeshComponents.h  MeshLoader.cpp  MeshLoader.h  MeshRenderer.cpp  MeshRenderer.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Scripting.cpp  Scripting.h  Shader.cpp  Shader.h  (+19 more)
AAAAEngine/AAAAGameEngine2/AAAAGameEngine2/x64/Debug/AAAAGameEngine2.tlog/: AAAAGameEngine2.lastbuildstate
AAAAEngine/Doxygen/: _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8cpp_source.html  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _components_8cpp.html  _components_8cpp__incl.map  _components_8cpp__incl.md5  _components_8cpp_source.html  _components_8h.html  _components_8h__dep__incl.map  _components_8h__dep__incl.md5  _components_8h__incl.map  _components_8h__incl.md5  _components_8h_source.html  _core_engine_8cpp.html  _core_engine_8cpp__incl.map  _core_engine_8cpp__incl.md5  _core_engine_8cpp_a07aaf1227e4d645f15e0a964f54ef291_icgraph.map  _core_engine_8cpp_a07aaf1227e4d645f15e0a964f54ef291_icgraph.md5  _core_engine_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _core_engine_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _core_engine_8cpp_a354fff04dde396a08a72cee8e1f7e187_icgraph.map  _core_engine_8cpp_a354fff04dde396a08a72cee8e1f7e187_icgraph.md5  _core_engine_8cpp_a5c39622609be6415488e188d8ea77951_cgraph.map  _core_engine_8cpp_a5c39622609be6415488e188d8ea77951_cgraph.md5  _core_engine_8cpp_a5c39622609be6415488e188d8ea77951_icgraph.map  _core_engine_8cpp_a5c39622609be6415488e188d8ea77951_icgraph.md5  _core_engine_8cpp_a6508c1547cbf58db29a2ea9e405234bd_icgraph.map  _core_engine_8cpp_a6508c1547cbf58db29a2ea9e405234bd_icgraph.md5  _core_engine_8cpp_a6999152473ebbb1cf8a6814ab2b0ed14_cgraph.map  _core_engine_8cpp_a6999152473ebbb1cf8a6814ab2b0ed14_cgraph.md5  _core_engine_8cpp_a6999152473ebbb1cf8a6814ab2b0ed14_icgraph.map  _core_engine_8cpp_a6999152473ebbb1cf8a6814ab2b0ed14_icgraph.md5  _core_engine_8cpp_a731a78b3559c235e2079366ac41ca8e0_cgraph.map  (+939 more)
AAAAEngine/ICT397 Documentation/: AssignmentCoverSheet.docx  Discussion of issues.docx  Game Design Document.docx  Game_Software_Design_Document.docx  UserManual.docx  (+4 more)
(+256 files in other folders)
